RESOLVED FIXED65349
CJK input broken after clicking on Flash content
https://bugs.webkit.org/show_bug.cgi?id=65349
Summary CJK input broken after clicking on Flash content
Tim Horton
Reported 2011-07-28 16:29:29 PDT
Steps to Reproduce: 0. Install Flash. 1. Enable Japanese text entry. Hiragana works. 2. Go to youtube.com. Make sure it's using Flash, not HTML5 Video. 3. Click on a video. 4. Click the play/pause button. 5. Click the back button. 6. Try to type into the search field. Expected Results: Inline text entry. Actual Results: Somewhat-buggy bottom-bar text entry, as in Flash apps. Notes (from ChangeLog): After giving Flash focus on a page and then navigating away from that page using the back button, we were not getting notified to switch back to inline (non-complex) input. Now, notify the page that it can leave complex text mode when the plugin is destroyed. Patch forthcoming. <rdar://problem/9854447>
Attachments
patch (1.41 KB, patch)
2011-07-28 16:31 PDT, Tim Horton
andersca: review+
webkit.review.bot: commit-queue-
patch (1.44 KB, patch)
2011-07-28 17:13 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2011-07-28 16:31:01 PDT
WebKit Review Bot
Comment 2 2011-07-28 17:07:12 PDT
Comment on attachment 102311 [details] patch Rejecting attachment 102311 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-03', '--port..." exit_code: 1 Last 500 characters of output: eLog M Source/WebKit2/Shared/FontInfo.cpp M Source/WebKit2/WebProcess/WebCoreSupport/mac/WebPopupMenuMac.mm r91961 = c8c9ff84269378e6e74c1a17182ca2426ec5bf38 (refs/remotes/origin/master) First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/9265319
Tim Horton
Comment 3 2011-07-28 17:13:41 PDT
Created attachment 102314 [details] patch Bot output is odd, but I somehow deleted the Reviewed by line.
WebKit Review Bot
Comment 4 2011-07-28 17:26:12 PDT
Comment on attachment 102314 [details] patch Clearing flags on attachment: 102314 Committed r91964: <http://trac.webkit.org/changeset/91964>
WebKit Review Bot
Comment 5 2011-07-28 17:26:16 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2011-07-28 21:51:04 PDT
Comment on attachment 102314 [details] patch What will fix text input if the plugin view goes into back/forward cache without being deleted?
Darin Adler
Comment 7 2011-07-28 22:00:01 PDT
Good point. I don’t think the destructor is the right place to put this code. I didn’t actually look at the patch. I just reviewed so the commit-bot would work. Anders was the actual reviewer.
Tim Horton
Comment 8 2011-07-28 22:03:24 PDT
Indeed, and I've just Cc'd Anders. I got the impression from him that this was the right place to put it (I went into his office with no idea where to put it), but Alexey's point is definitely valid (and something I hadn't considered). I'll talk to him again tomorrow and see about better options.
Alexey Proskuryakov
Comment 9 2011-07-28 22:16:09 PDT
Well, the answer is that pages with plug-ins never go into b/f cache. But we want to fix that, and there is nothing to remind us that this bug needs to be revisited when doing so.
Alexey Proskuryakov
Comment 10 2011-08-09 10:38:57 PDT
*** Bug 65892 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.