REGRESSION (5.1): CJK input broken after clicking on Flash content <rdar://problem/9854447> https://bugs.webkit.org/show_bug.cgi?id=65349

Patch by Tim Horton <timothy_horton@apple.com> on 2011-07-28
Reviewed by Darin Adler.

After giving Flash focus on a page and then navigating away from that page
using the back button, we were not getting notified to switch back to
inline (non-complex) input. Now, notify the page that it can leave complex
text mode when the plugin is destroyed.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::~PluginView):

git-svn-id: svn://svn.chromium.org/blink/trunk@91964 bbb929c8-8fbe-4397-9dbb-9b2b20218538