third_party/WebKit/Source/WebKit2/WebProcess/Plugins/PluginView.cpp
@@ -287,6 +287,9 @@ PluginView::~PluginView()
         m_isBeingDestroyed = true;
         m_plugin->destroyPlugin();
         m_isBeingDestroyed = false;
+#if PLATFORM(MAC)
+        setComplexTextInputEnabled(false);
+#endif
     }
 
     // Invalidate the object map.
